@@ -1103,3 +1103,7 @@ Tue Jun  5 12:15:32 2007                        Michael Jennings (mej)
 Attempting to fix a bug in Subversion support found by Jim Perrin.
 Let's see if this works.
 ----------------------------------------------------------------------
+Tue Jun  5 16:49:13 2007                        Michael Jennings (mej)
+
+Hopefully this will fix mzimport for Subversion.
+----------------------------------------------------------------------
